Add api request

--- a/static/locales/pt-BR.json
+++ b/static/locales/pt-BR.json
@@ -4,6 +4,10 @@
   "common.user": "Usuário",
   "common.next": "Próximo",
   "common.register": "Cadastrar",
+  "common.something-wrong": "Algo deu errado",
+  "common.success": "Boa!",
+  "common.success-registered": "Cadastrado com sucesso!",
+  "common.ops": "Ops!",
   "common.select-the-province": "Selecione o estado...",
   "user.fields.email": "E-mail",
   "user.fields.password": "Senha",
