--- a/static/locales/pt-BR.json
+++ b/static/locales/pt-BR.json
@@ -9,6 +9,7 @@
   "common.success-registered": "Cadastrado com sucesso!",
   "common.ops": "Ops!",
   "common.enter": "Entrar",
+  "common.sign-up": "Registre-se",
   "common.select-the-province": "Selecione o estado...",
   "user.fields.email.placeholder": "exemplo@gmail.com",
   "user.fields.email": "E-mail",
