--- a/static/locales/pt-BR.json
+++ b/static/locales/pt-BR.json
@@ -8,7 +8,10 @@
   "common.success": "Boa!",
   "common.success-registered": "Cadastrado com sucesso!",
   "common.ops": "Ops!",
+  "common.enter": "Entrar",
+  "common.sign-up": "Registre-se",
   "common.select-the-province": "Selecione o estado...",
+  "user.fields.email.placeholder": "exemplo@gmail.com",
   "user.fields.email": "E-mail",
   "user.fields.password": "Senha",
   "user.fields.confirm-password": "Confirmação de senha",
