--- a/static/locales/pt-BR.json
+++ b/static/locales/pt-BR.json
@@ -11,6 +11,7 @@
   "common.enter": "Entrar",
   "common.sign-up": "Registre-se",
   "common.select-the-province": "Selecione o estado...",
+  "common.required-field": "{{field}} é obrigatório",
   "user.fields.email.placeholder": "exemplo@gmail.com",
   "user.fields.email": "E-mail",
   "user.fields.password": "Senha",
