Add recover password button

--- a/static/locales/pt-BR.json
+++ b/static/locales/pt-BR.json
@@ -10,8 +10,12 @@
   "common.ops": "Ops!",
   "common.enter": "Entrar",
   "common.sign-up": "Registre-se",
+  "common.recover-password": "Esqueci minha senha",
   "common.select-the-province": "Selecione o estado...",
   "common.required-field": "{{field}} é obrigatório",
+  "common.empty-error": "{{field}} não pode ser vazio",
+  "recover-password.message": "Digite o e-mail cadastrado na plataforma",
+  "recover-password.success.message": "E-mail de recuperação de senha foi enviado ao e-mail",
   "user.fields.email.placeholder": "exemplo@gmail.com",
   "user.fields.email": "E-mail",
   "user.fields.password": "Senha",
